--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react-redux": "7.1.25",
     "antd": "5.5.2",
     "axios": "1.4.0",
+    "classnames": "2.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "8.0.5",
@@ -38,7 +39,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!axios)/\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
