--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "13.5.0",
     "@typescript-eslint/eslint-plugin": "5.59.8",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
@@ -13,14 +16,15 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.32.2",
-    "prettier": "2.8.8"
+    "identity-obj-proxy": "3.0.0",
+    "jest": "29.5.0",
+    "jest-environment-jsdom": "29.5.0",
+    "prettier": "2.8.8",
+    "ts-jest": "29.1.0"
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.9.5",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "13.4.0",
-    "@testing-library/user-event": "13.5.0",
-    "@types/jest": "27.5.2",
+    "@types/jest": "29.5.2",
     "@types/node": "16.18.34",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
@@ -33,13 +37,12 @@
     "react-redux": "8.0.5",
     "react-scripts": "5.0.1",
     "redux": "4.2.1",
-    "typescript": "4.9.5",
-    "web-vitals": "2.1.4"
+    "typescript": "4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!axios)/\"",
+    "test": "jest --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
